src/parser.output
State 11 conflicts: 6 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: expression_list

    2 expression_list: expression_list expression
    3                | expression

    4 expression: symbol_list
    5           | "[" expression_list "]"
    6           | "[" "]"

    7 symbol_list: symbol_list symbol
    8            | symbol

    9 symbol: ">"
   10       | "<"
   11       | "+"
   12       | "-"
   13       | "."
   14       | ","


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
">" (258) 9
"<" (259) 10
"+" (260) 11
"-" (261) 12
"." (262) 13
"," (263) 14
"[" (264) 5 6
"]" (265) 5 6


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
program (12)
    on left: 1, on right: 0
expression_list (13)
    on left: 2 3, on right: 1 2 5
expression (14)
    on left: 4 5 6, on right: 2 3
symbol_list (15)
    on left: 7 8, on right: 4 7
symbol <std::string> (16)
    on left: 9 10 11 12 13 14, on right: 7 8


State 0

    0 $accept: . program "end of file"

    ">"  shift, and go to state 1
    "<"  shift, and go to state 2
    "+"  shift, and go to state 3
    "-"  shift, and go to state 4
    "."  shift, and go to state 5
    ","  shift, and go to state 6
    "["  shift, and go to state 7

    program          go to state 8
    expression_list  go to state 9
    expression       go to state 10
    symbol_list      go to state 11
    symbol           go to state 12


State 1

    9 symbol: ">" .

    $default  reduce using rule 9 (symbol)


State 2

   10 symbol: "<" .

    $default  reduce using rule 10 (symbol)


State 3

   11 symbol: "+" .

    $default  reduce using rule 11 (symbol)


State 4

   12 symbol: "-" .

    $default  reduce using rule 12 (symbol)


State 5

   13 symbol: "." .

    $default  reduce using rule 13 (symbol)


State 6

   14 symbol: "," .

    $default  reduce using rule 14 (symbol)


State 7

    5 expression: "[" . expression_list "]"
    6           | "[" . "]"

    ">"  shift, and go to state 1
    "<"  shift, and go to state 2
    "+"  shift, and go to state 3
    "-"  shift, and go to state 4
    "."  shift, and go to state 5
    ","  shift, and go to state 6
    "["  shift, and go to state 7
    "]"  shift, and go to state 13

    expression_list  go to state 14
    expression       go to state 10
    symbol_list      go to state 11
    symbol           go to state 12


State 8

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 15


State 9

    1 program: expression_list .
    2 expression_list: expression_list . expression

    ">"  shift, and go to state 1
    "<"  shift, and go to state 2
    "+"  shift, and go to state 3
    "-"  shift, and go to state 4
    "."  shift, and go to state 5
    ","  shift, and go to state 6
    "["  shift, and go to state 7

    $default  reduce using rule 1 (program)

    expression   go to state 16
    symbol_list  go to state 11
    symbol       go to state 12


State 10

    3 expression_list: expression .

    $default  reduce using rule 3 (expression_list)


State 11

    4 expression: symbol_list .
    7 symbol_list: symbol_list . symbol

    ">"  shift, and go to state 1
    "<"  shift, and go to state 2
    "+"  shift, and go to state 3
    "-"  shift, and go to state 4
    "."  shift, and go to state 5
    ","  shift, and go to state 6

    ">"       [reduce using rule 4 (expression)]
    "<"       [reduce using rule 4 (expression)]
    "+"       [reduce using rule 4 (expression)]
    "-"       [reduce using rule 4 (expression)]
    "."       [reduce using rule 4 (expression)]
    ","       [reduce using rule 4 (expression)]
    $default  reduce using rule 4 (expression)

    symbol  go to state 17


State 12

    8 symbol_list: symbol .

    $default  reduce using rule 8 (symbol_list)


State 13

    6 expression: "[" "]" .

    $default  reduce using rule 6 (expression)


State 14

    2 expression_list: expression_list . expression
    5 expression: "[" expression_list . "]"

    ">"  shift, and go to state 1
    "<"  shift, and go to state 2
    "+"  shift, and go to state 3
    "-"  shift, and go to state 4
    "."  shift, and go to state 5
    ","  shift, and go to state 6
    "["  shift, and go to state 7
    "]"  shift, and go to state 18

    expression   go to state 16
    symbol_list  go to state 11
    symbol       go to state 12


State 15

    0 $accept: program "end of file" .

    $default  accept


State 16

    2 expression_list: expression_list expression .

    $default  reduce using rule 2 (expression_list)


State 17

    7 symbol_list: symbol_list symbol .

    $default  reduce using rule 7 (symbol_list)


State 18

    5 expression: "[" expression_list "]" .

    $default  reduce using rule 5 (expression)
